--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  geolocator: ^13.0.2
+  location: ^5.0.0
+  geocoding: ^3.0.0
+  google_maps_flutter: ^2.10.0
   flutter:
     sdk: flutter
 
