--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   location: ^5.0.0
   geocoding: ^3.0.0
   google_maps_flutter: ^2.10.0
+  flutter_polyline_points: ^2.1.0
   flutter:
     sdk: flutter
 
