--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
 
         <activity
+            android:label="CleenLoop"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
