--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core:
   firebase_auth:
+  google_sign_in:
 
 dev_dependencies:
   flutter_test:
