--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core:
   firebase_auth:
   google_sign_in:
+  google_maps_flutter:
+  geocoding:
+  location:
 
 dev_dependencies:
   flutter_test:
