--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core:
+  cloud_firestore:
   firebase_auth:
+  table_calendar: ^3.0.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
